--- a/code.html
+++ b/code.html
@@ -27,7 +27,7 @@
 
                 <a class="navbar-brand" href="/index.html">
                     <img src="/img/starmark.png" height="30" alt="dev logo" />
-                    App Name
+                    Hundo
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -77,7 +77,7 @@
                             Swal.fire(
                                 {
                                     backdrop: false,
-                                    title: "App Name",
+                                    title: "Hundo",
                                     text: message
                                 }
                             );
@@ -86,10 +86,10 @@
                 </pre>
             </div>
             <div class="col-12 col-md-4">
-            <p>The code is structured in one function</p>
-            <h5>displayMessage</h5>
-            <p>Shows a SweetAlert with the value of the <code>message</code> variable</p>
-        </div>
+                <p>The code is structured in one function</p>
+                <h5>displayMessage</h5>
+                <p>Shows a SweetAlert with the value of the <code>message</code> variable</p>
+            </div>
         </div>
     </main>
 
@@ -119,12 +119,12 @@
     <script src="/js/prism.js"></script>
 
     <script> Prism.plugins.NormalizeWhitespace.setDefaults({
-        'remove-trailing':true,
-        'remove-indent': true,
-        'left-trim': true,
-        'right-trim': true
+            'remove-trailing': true,
+            'remove-indent': true,
+            'left-trim': true,
+            'right-trim': true
         })
-        </script>
+    </script>
 </body>
 
 </html>
