--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="container-fluid">
 
                 <a class="navbar-brand" href="/index.html">
-                    <img src="/img/starmark.png" height="30" alt="dev logo" />
-                    App Name
+                    <img src="/img/bird.png" height="30" alt="dev logo" />
+                    Hundo: A coding challenge
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,11 +62,11 @@
     <main class="container py-5">
         <div class="row row-cols-1 gy-5">
             <div class="col col-lg-6 order-lg-last d-flex justify-content align-content-center">
-                <img src="/img/APPNAMELogo.svg" class="img-fluid app-logo p-3">
+                <img src="/img/hundred.png" class="img-fluid app-logo p-3">
             </div>
             <div class="col col-lg-6 text-center">
                 <h1 class="display-5">AppName: A Coding Challenge</h1>
-                <p class="lead">Your proj description goes here</p>
+                <p class="lead">One loop at a time. The objective is to dipslpay numbers from 0-100, with even numbers in <strong>BOLD</strong></p>
 
                 <div class="d-flex justify-content-center">
                     <ul class="list-unstyled text-start checklist">
