--- a/code.html
+++ b/code.html
@@ -68,27 +68,96 @@
             <div class="col-12 col-md-8">
                 <pre class="line-numbers">
                     <code class="language-js">
-                        function displayMessage() {
+                        // Get the numbers from our form inputs
+// Entry POINT in our code (it comes 1st-like a front door)
+// aka the CONTROLLER FUNCTION
+function getValues() {
+    let startNumber = document.getElementById("startValue").value;
+    let endNumber = document.getElementById("endValue").value;
 
-                            let inputBox = document.getElementById("message");
-                        
-                            let message = inputBox.value;
-                        
-                            Swal.fire(
-                                {
-                                    backdrop: false,
-                                    title: "Hundo",
-                                    text: message
-                                }
-                            );
-                        }
+    startNumber = Number(startNumber);
+    endNumber = Number(endNumber);
+
+    if (isNaN(startNumber) == true || isNaN(endNumber) == true) {
+        // make sure inputs are numbers
+        Swal.fire({
+            title: "Oops!",
+            text: "Type in a number, not text",
+            icon: "error",
+            backdrop: false
+        })
+
+    } else if (startNumber > endNumber) {
+        // display an error message if first num is too big
+        Swal.fire({
+            title: "Oops!",
+            text: "The starting number must be less than the ending number",
+            icon: "error"
+        })
+    } else {
+        // display numbers if all is ok
+        let numberArray = generateNumbers(startNumber, endNumber);
+
+        displayNumbers(numberArray);
+    }
+}
+
+// Business Logic - creates every number in the input range
+// aka MODEL of our data DATA MODEL
+function generateNumbers(start, end) {
+
+    let range = [];
+
+    for (let number = start; number <= end; number++) {
+
+        range.push(number)
+    }
+    return range;
+}
+
+// put the numbers on the page
+// aka VIEW FUNCTION - it's responsible for what you view in the pg
+function displayNumbers(numbersToDisplay) {
+
+    let tableHtml = "";
+
+    for (let index = 0; index < numbersToDisplay.length; index++) {
+
+        let currentNumber = numbersToDisplay[index];
+
+        let className = "";
+
+        if (currentNumber % 2 == 0) {
+            className = "even";
+        } else {
+            className = "odd";
+        }
+
+        let tableRowHtml = `&lt;tr>&lt;td class="${className}">${currentNumber}</td></tr>`;
+
+        tableHtml = tableHtml + tableRowHtml;
+        // tableHtml += tableRowHtml;
+    }
+
+    document.getElementById("results").innerHTML = tableHtml;
+}
                     </code>
                 </pre>
             </div>
             <div class="col-12 col-md-4">
                 <p>The code is structured in one function</p>
-                <h5>displayMessage</h5>
-                <p>Shows a SweetAlert with the value of the <code>message</code> variable</p>
+                <h5>Walkthrough</h5>
+                <ul>
+                    <li class="p-2">The start and end Values are pulled from the input our app recieves</li>
+                    <li class="p-2">The imput (a string value by default) is converted into a number</li>
+                    <li class="p-2">We perform input validation with boolean logic </li>
+                    <li class="p-2">Configure a SweetAlert to alert the user if their input is not accepted</li>
+                    <li class="p-2">We use a for loop to validate the input, and arrange it in an array </li>
+                    <li class="p-2">Another for loop, checks the index of our array for the number to display</li>
+                    <li class="p-2">The reulting numbers are run through a modulo, to seperate odd numbers from even </li>
+                    <li class="p-2">We create a template literal and interpalate JS into an Html table </li>
+                    <li class="p-2">Through DOM Manipulation, we send our result to be used by the Html doc</li>
+                </ul>
             </div>
         </div>
     </main>
