--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>JSMini</title>
+    <title>1234 GO</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -26,7 +26,7 @@
 
                 <a class="navbar-brand" href="/index.html">
                     <img src="/img/bird.png" height="30" alt="dev logo" />
-                    Hundo
+                    1234 GO
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -46,13 +46,13 @@
                             <a class="nav-link" href="/code.html">The Code</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">The Repository(link)</a>
+                            <a class="nav-link" href="https://github.com/A-Balan/1234GO">The Repo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://abalan.netlify.app/">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog link</a>
+                            <a class="nav-link" href="#">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -64,10 +64,9 @@
         <div class="row row-cols-1 row-cols-md-2 gy-2">
             <div class="col border-end border-2">
 
-                <h1 class="display-5">Hundred: A JS coding challenge</h1>
-                <p class="lead">One loop at a time. The objective is to dipslpay numbers from 0-100, with even numbers
-                    in
-                    <strong>BOLD</strong>
+                <h1>1234 GO</h1>
+                <p class="lead">On GO! The objective is to display a custom range of numbers, with even numbers
+                    in <strong>BOLD</strong>
                 </p>
 
                 <h2 class="mt-5 border-bottom border-2">Instrunctions</h2>
@@ -111,7 +110,7 @@
         </div>
     </main>
 
-    <footer class="footer container-fluid py-3 bg-warning text-light text-center">
+    <footer class="footer container-fluid py-3 text-light text-center">
         <div class="container">
             <div class="row row-cols-1 row-cols-lg-3 align-items-center gy-2">
                 <div class="col text-lg-start">
