--- a/code.html
+++ b/code.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>JSMini</title>
+    <title>1234 GO</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -26,8 +26,8 @@
             <div class="container-fluid">
 
                 <a class="navbar-brand" href="/index.html">
-                    <img src="/img/starmark.png" height="30" alt="dev logo" />
-                    Hundo
+                    <img src="/img/bird.png" height="30" alt="dev logo" />
+                    1234 GO
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,13 +47,13 @@
                             <a class="nav-link active" aria-current="page" href="/code.html">The Code</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">The Repository(link)</a>
+                            <a class="nav-link" href="https://github.com/A-Balan/1234GO">The Repo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://abalan.netlify.app/">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog link</a>
+                            <a class="nav-link" href="#">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -145,7 +145,6 @@ function displayNumbers(numbersToDisplay) {
                 </pre>
             </div>
             <div class="col-12 col-md-4">
-                <p>The code is structured in one function</p>
                 <h5>Walkthrough</h5>
                 <ul>
                     <li class="p-2">The start and end Values are pulled from the input our app recieves</li>
@@ -153,16 +152,16 @@ function displayNumbers(numbersToDisplay) {
                     <li class="p-2">We perform input validation with boolean logic </li>
                     <li class="p-2">Configure a SweetAlert to alert the user if their input is not accepted</li>
                     <li class="p-2">We use a for loop to validate the input, and arrange it in an array </li>
-                    <li class="p-2">Another for loop, checks the index of our array for the number to display</li>
-                    <li class="p-2">The reulting numbers are run through a modulo, to seperate odd numbers from even </li>
+                    <li class="p-2">Another for loop checks the index of our array for the number to display</li>
+                    <li class="p-2">The resulting numbers are run through a modulo, to seperate odd numbers from even </li>
                     <li class="p-2">We create a template literal and interpalate JS into an Html table </li>
-                    <li class="p-2">Through DOM Manipulation, we send our result to be used by the Html doc</li>
+                    <li class="p-2">Through DOM Manipulation, we send our results to be used by the Html doc</li>
                 </ul>
             </div>
         </div>
     </main>
 
-    <footer class="footer container-fluid py-3 bg-warning text-light text-center">
+    <footer class="footer container-fluid py-3 text-light text-center">
         <div class="container">
             <div class="row row-cols-1 row-cols-lg-3 align-items-center gy-2">
                 <div class="col text-lg-start">
