--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>1<strong>2</strong>3<strong>4</strong> <strong>GO</strong></title>
+    <title>1234 GO</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -17,6 +17,8 @@
 
     <!-- custom style sheet -->
     <link rel="stylesheet" href="/css/site.css" />
+
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon"/>
 </head>
 
 <body>
@@ -26,7 +28,7 @@
 
                 <a class="navbar-brand" href="/index.html">
                     <img src="/img/bird.png" height="30" alt="dev logo" />
-                    <title>1<strong>2</strong>3<strong>4</strong> <strong>GO</strong>: A coding challenge
+                    <title>1234 GO</title>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -46,7 +48,7 @@
                             <a class="nav-link" href="/code.html">The Code</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Repository</a>
+                            <a class="nav-link" href="https://github.com/A-Balan/1234GO">The Repo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://abalan.netlify.app/">About</a>
@@ -62,17 +64,15 @@
     <main class="container py-5">
         <div class="row row-cols-1 gy-5">
             <div class="col col-lg-6 order-lg-last d-flex justify-content align-content-center">
-                <img src="/img/hundred.png" class="img-fluid app-logo p-3">
+                <img src="/img/hundred.png" class="hundredimg img-fluid app-logo p-3">
             </div>
             <div class="col col-lg-6 text-center">
-                <h1 class="display-5">AppName: A Coding Challenge</h1>
-                <p class="lead">One loop at a time. The objective is to dipslpay numbers from 0-100, with even numbers in <strong>BOLD</strong></p>
+                <h1>1234 GO: A Coding Challenge</h1>
+                <p class="lead">On GO! The objective is to display a custom range of numbers, with even numbers in <strong>BOLD</strong></p>
 
                 <div class="d-flex justify-content-center">
                     <ul class="list-unstyled text-start checklist">
-                        <li>
-                            <i class="bi bi-check-square-fill"></i> CSS & BootStrap Layouts
-                        </li>
+                        <li><i class="bi bi-check-square-fill"></i> CSS & BootStrap Layouts</li>
                         <li><i class="bi bi-check-square-fill"></i> JS fundamentals</li>
                         <li><i class="bi bi-check-square-fill"></i> JS Loops</li>
                         <li><i class="bi bi-check-square-fill"></i> JS DOM manipulation</li>
@@ -93,7 +93,7 @@
             </div>
         </div>
     </main>
-    <footer class="footer container-fluid py-3 bg-warning text-light text-center">
+    <footer class="footer container-fluid py-3 text-center">
         <div class="container">
             <div class="row row-cols-1 row-cols-lg-3 align-items-center gy-2">
                 <div class="col text-lg-start">
